Cleaning up the public-facing repository
Various updates to public repository.

--- a/2. Clean data/Calendar_integration_partA.ipynb
+++ b/2. Clean data/Calendar_integration_partA.ipynb
@@ -379,13 +379,14 @@
     "for date in init_dates_2:\n",
     "    dateCols =['last_scraped', 'host_since', 'first_review', 'last_review']\n",
     "    list_file = pd.read_csv(\"united-states_portland_\" + date + \"_listings.csv\", low_memory = False, parse_dates = dateCols)\n",
-    "    print(i)\n",
+    "\n",
     "    if len(list_file.last_scraped.unique()) > 1:\n",
-    "        print(\"Issue!\")\n",
+    "        \n",
+    "        print(\"Issue with file index \" + str(i) + \"!\")\n",
     "        print(list_file.last_scraped.unique())\n",
     "        adjustment_layer.append(len(list_file.last_scraped.unique()))\n",
     "    else:\n",
-    "        print(\"No issue\")\n",
+    "#         print(\"*No* issue with file index \" + str(i))\n",
     "        adjustment_layer.append(0)\n",
     "    i += 1\n",
     "adjustment_layer"
@@ -773,7 +774,7 @@
     "    #Append to list\n",
     "    os.chdir(data_path)\n",
     "    df_list.append(booked_df_save)\n",
-    "    print('chunk '+ str(j) + \" completed\")"
+    "#     print('chunk '+ str(j) + \" completed\") # Creates many prints, helpful for error checking"
    ]
   },
   {
@@ -880,14 +881,17 @@
     }
    ],
    "source": [
-    "#Iterative loop to prevent kernel crash\n",
+    "# Iterative loop to prevent kernel crash\n",
+    "\n",
     "df_list = []\n",
     "j=0\n",
     "for i in range(0,82):\n",
     "    process(init=i*100, stop=(i*100)+100)\n",
     "    j+=1\n",
     "booked_df_final = pd.concat(df_list)\n",
-    "booked_df_final.to_csv('rejoined_booked_df.csv', index=False)"
+    "booked_df_final.to_csv('rejoined_booked_df.csv', index=False)\n",
+    "\n",
+    "print(\"Process complete!\")"
    ]
   }
  ],
