--- a/1. Download and compile data/Aggregate Listings Data.ipynb
+++ b/1. Download and compile data/Aggregate Listings Data.ipynb
@@ -138,43 +138,69 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "N columns: 64\n",
-      "['Unnamed: 0', 'id', 'scrape_id', 'last_scraped', 'name', 'picture_url', 'host_id', 'host_name', 'host_since', 'host_picture_url', 'street', 'neighbourhood', 'neighbourhood_cleansed', 'city', 'state', 'zipcode', 'market', 'country', 'latitude', 'longitude', 'is_location_exact', 'property_type', 'room_type', 'accommodates', 'bathrooms', 'bedrooms', 'beds', 'bed_type', 'square_feet', 'price', 'weekly_price', 'monthly_price', 'guests_included', 'extra_people', 'minimum_nights', 'maximum_nights', 'calendar_updated', 'availability_30', 'availability_60', 'availability_90', 'availability_365', 'calendar_last_scraped', 'number_of_reviews', 'first_review', 'last_review', 'review_scores_rating', 'review_scores_accuracy', 'review_scores_cleanliness', 'review_scores_checkin', 'review_scores_communication', 'review_scores_location', 'review_scores_value', 'host_is_superhost', 'host_about', 'host_neighbourhood', 'host_location', 'host_acceptance_rate', 'host_listings_count', 'host_total_listings_count', 'calculated_host_listings_count', 'requires_license', 'license', 'jurisdiction_names', 'reviews_per_month']\n",
-      "---------------------\n",
-      "N columns: 69\n",
-      "---------------------\n",
-      "N columns: 93\n",
-      "---------------------\n",
-      "N columns: 93\n",
-      "---------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# First take a look at columns in first four files\n",
     "\n",
-    "for my_file in numFiles[0:4]:\n",
+    "file_vars = [] # List of all variables in a scrape month\n",
+    "N_file_vars = [] # Simple count of all variables in a scrape month\n",
+    "\n",
+    "for my_file in numFiles:\n",
     "    data = pd.read_csv(data_dir + '/' + my_file, encoding= 'iso-8859-1')\n",
     "    data_columns = list(data.columns)\n",
-    "    print(\"N columns: \" + str(len(data_columns)))\n",
-    "\n",
-    "    if my_file == numFiles[0]:\n",
-    "        print(data_columns)\n",
-    "    \n",
-    "    print(\"---------------------\")\n",
-    "    \n",
-    "# Delete first two files because they are missing some variables of interest\n",
-    "numFiles = np.delete(numFiles, [0,1])"
+    "    file_vars.append(data_columns)\n",
+    "    N_file_vars.append(len(data_columns))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date files to be dropped:\n",
+      "['united-states_portland_2015-03-01_listings.csv.gz'\n",
+      " 'united-states_portland_2015-05-12_listings.csv.gz']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CREATE A DROP INDICATOR FOR DATA SCRAPES THAT ARE MISISNG KEY VARIABLES\n",
+    "\n",
+    "counter = 0\n",
+    "drop_list = []\n",
+    "\n",
+    "for date_vars in file_vars:\n",
+    "    \n",
+    "    # I need instant bookable to be included in my set of variables, could include many more conditions here\n",
+    "    if 'instant_bookable' in date_vars:\n",
+    "        pass \n",
+    "    \n",
+    "    else: \n",
+    "        drop_list.append(counter)\n",
+    "    \n",
+    "    counter +=1\n",
+    "    \n",
+    "print(\"Date files to be dropped:\")\n",
+    "print(numFiles[drop_list])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete date files that are missing variables of interest\n",
+    "numFiles = np.delete(numFiles, drop_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -250,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +285,7 @@
        "[]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -301,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -380,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -541,9 +567,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nx/l6t8st49137cl77yqnxy4z2m0000gn/T/ipykernel_27138/4091709700.py:56: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/nx/l6t8st49137cl77yqnxy4z2m0000gn/T/ipykernel_39769/4091709700.py:56: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  output_df[k + str(date_count)] = merged_df[k].copy()\n",
-      "/var/folders/nx/l6t8st49137cl77yqnxy4z2m0000gn/T/ipykernel_27138/4091709700.py:58: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/nx/l6t8st49137cl77yqnxy4z2m0000gn/T/ipykernel_39769/4091709700.py:58: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  output_df['List_month'+str(date_count)] = listing_df['id'].isin(np.array(values_df['id']))*1 # See if the observation is in the month data\n"
      ]
     }
@@ -555,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -582,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
