Updates to A and B integration
Dealing with hardcoding and error in use of dates.

--- a/2. Clean data/Calendar_integration_partA.ipynb
+++ b/2. Clean data/Calendar_integration_partA.ipynb
@@ -474,17 +474,6 @@
     "\n",
     "listings_df = listings_df[listings_df['drop_indicator'] == 0]\n",
     "\n",
-    "# late_appearance_df = listings_df.loc[((listings_df['first_appearance']== 1) & (listings_df['month'] >= 51))]\n",
-    "    \n",
-    "# late_appearance_list = late_appearance_df['id'].tolist()\n",
-    "\n",
-    "# all_ids = [x for x in all_ids if x not in late_appearance_list]\n",
-    "\n",
-    "# all_ids = np.array(all_ids)\n",
-    "\n",
-    "# mask = np.isin(all_ids, listings_df['id'].unique())\n",
-    "# all_ids = all_ids[mask] # Makes sure the ID is in the listings dataframe\n",
-    "\n",
     "# See if the data cleaning dropped any of the selected listings:\n",
     "id_mask = np.isin(all_ids, listings_df['id'].unique())\n",
     "\n",
@@ -506,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,29 +622,31 @@
     "    \n",
     "# =========================================================\n",
     "\n",
-    "#     There are two ways in which a property is considered booked:\n",
+    "#   There are two ways in which a property is considered booked:\n",
     "\n",
-    "# * **Available to unavailable:** Firstly a property is booked if the sum of the avail_change column for a \n",
-    "#                                 given property across various scrapes is equal to -1. This represents the \n",
-    "#                                 fact that a property was seen as available and then it became unavailable. \n",
+    "# * **Available to unavailable:** \n",
+    "#             Firstly a property is booked if the sum of the avail_change column for a \n",
+    "#             given property across various scrapes is equal to -1. This represents the \n",
+    "#             fact that a property was seen as available and then it became unavailable. \n",
     "# \n",
-    "# * **Allowing for unavailable to available to unavailable:** I want to allow for a property to be \n",
-    "#                                                             unavailable, become available and then switch \n",
-    "#                                                             back to being unavailable. To achieve this, I \n",
-    "#                                                             set three conditions:\n",
+    "# * **Allowing for unavailable to available to unavailable:** \n",
+    "#             I want to allow for a property to be \n",
+    "#             unavailable, become available and then switch \n",
+    "#             back to being unavailable. To achieve this, I \n",
+    "#             set three conditions:\n",
     "\n",
-    "#                                                             **Cond 2.1:** Sum of the avail_change row is 0, \n",
-    "#                                                                           this allows for a property to go \n",
-    "#                                                                           from unavailable to available (1) \n",
-    "#                                                                           and then go from available to \n",
-    "#                                                                           unavailable (-1)\n",
+    "#                **Cond 2.1:** Sum of the avail_change row is 0, \n",
+    "#                this allows for a property to go \n",
+    "#                from unavailable to available (1) \n",
+    "#                and then go from available to \n",
+    "#                unavailable (-1)\n",
     "\n",
-    "#                                                             **Cond 2.2:** Second, the last availability seen \n",
-    "#                                                                           must be equal to zero\n",
+    "#                **Cond 2.2:** Second, the last availability seen \n",
+    "#                must be equal to zero\n",
     "\n",
-    "#                                                             **Cond 2.3:** Thirdly, the property must have been \n",
-    "#                                                                           seen as available at some point so we\n",
-    "#                                                                           must have a 1 in the avail_matrix\n",
+    "#                **Cond 2.3:** Thirdly, the property must have been \n",
+    "#                seen as available at some point so we\n",
+    "#                must have a 1 in the avail_matrix\n",
     "    \n",
     "    case_1 = (np.nansum(avail_change, axis=2) == -1)*1 \n",
     "# =========================================================    \n",
@@ -796,7 +787,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunk_size = 100 # Chunk size determined through trial and error\n",
+    "N_chunks = int(np.ceil(len(all_ids)/chunk_size))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -813,9 +814,10 @@
     "# Iterative loop to prevent kernel crash\n",
     "\n",
     "df_list = []\n",
-    "j=0\n",
-    "for i in range(0,82):\n",
-    "    process(init=i*100, stop=(i*100)+100)\n",
+    "\n",
+    "j = 0\n",
+    "for i in range(N_chunks):\n",
+    "    process(init=i*chunk_size, stop=(i + 1)*chunk_size)\n",
     "    j+=1\n",
     "    \n",
     "booked_df_final = pd.concat(df_list)\n",
