Final weekend updates of partA & partB
Changes affecting presentation of cleaning files.

--- a/2. Clean data/Calendar_integration_partA.ipynb
+++ b/2. Clean data/Calendar_integration_partA.ipynb
@@ -1,21 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calendar_integration_partA\n",
+    "# Calendar integration, part A\n",
     "\n",
-    "## Created June 19, 2020\n",
+    "This Jupyter Notebook allows a researcher to load in and organize the compressed “calendar.csv.gz” files available from Inside Airbnb. These calendar files contain information about a given listing’s availability and pricing for the next 365 days starting from the date of the scrape. The daily pricing and availability information provides greater detail on how hosts adjust prices to account for weekends, holidays and other special events throughout the year. The headline prices contained in the previous “1st_stage_panel_data_cleaning” notebook greatly understate the variation in prices that Airbnb consumers actually face.\n",
     "\n",
-    "This file is the first half of the file \"CALENDAR DATA_05\", and it produces a dataframe named 'rejoined_booked_df.csv.'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Import libraries and directory setup"
+    "The current Notebook also calculates the number of bookings for properties by leveraging changes in availability across scrape dates and attempts to find the price associated with these bookings by using the last seen price before the property became unavailable. This approach shares similarities to the approach in Williams (2017), *Dynamic Airline Pricing and Seat Availability*, in which the author identifies airline bookings by observing changes in the seat availability on flights. Since scrapes on Inside Airbnb occur on the monthly basis, the measures for bookings will be relatively crude. I leverage review data to further augment changes in availability in the second part of the calendar integration work (“Calendar_integration_partB”)."
    ]
   },
   {
@@ -63,15 +57,21 @@
     "graphics_folder = cwd2 + '/3. Graphics/'\n",
     "data_path = cwd2 + '/Saved data/'\n",
     "csv_path = cwd2 + '/0. Raw data/' + city_folder\n",
+    "\n",
     "# Revert to preliminary directory\n",
     "os.chdir(cwd1)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preliminary processing"
+    "# 1. Preliminary processing\n",
+    "\n",
+    "Select relevant calendar files, load in previously created dataframe on monthly listings, and set some criteria by which to clean the calendar files.\n",
+    "\n",
+    "It is also necessary to adjust for the fact that some monthly scrapes took multiple days. The reason for this adjustment is that that there will be different amounts of dates in scrapes that took longer to complete."
    ]
   },
   {
@@ -139,21 +139,27 @@
     "def complex_extract_cal_list(date, cal_start, cal_end, update_cutoff=90, avail_cutoff=0):\n",
     "\n",
     "    \"\"\"\n",
-    "    The point of this function is to remove listings that seem dormant \n",
+    "    This function removes listings that appear dormant \n",
     "    on Airbnb from the calendar files that we will be using.\n",
+    "    \n",
+    "    Dormancy is determined by when the calendar was last updated, whether a property is instant bookable,\n",
+    "    and based on future availability of the property.\n",
     "    \"\"\"\n",
     "    \n",
     "    warnings.simplefilter(\"ignore\", category=SettingWithCopyWarning)\n",
     "\n",
     "    # Managing listings dataframe \n",
     "    dateCols =['last_scraped', 'host_since', 'first_review', 'last_review']\n",
-    "    list_file = pd.read_csv(\"united-states_portland_\" + date + \"_listings.csv.gz\", low_memory = False, parse_dates = dateCols)\n",
+    "    \n",
+    "    list_file = pd.read_csv(\"united-states_portland_\" + date + \"_listings.csv.gz\", \n",
+    "                            low_memory = False, parse_dates = dateCols)\n",
     "    \n",
     "    small = list_file['calendar_updated'].str.split(' ', 3, expand=True)\n",
     "    small.columns = ['count', 'measure', 'length']\n",
     "    small = small[['count', 'measure']]\n",
     "    small = small.replace([\"days\", 'week', 'weeks', 'months', 'today', 'never','yesterday'], \n",
     "                          [1, 7, 7, 30, 0, 999, 1])\n",
+    "    \n",
     "    small['count'] = small['count'].replace('a', 1)\n",
     "    small = small.fillna(1)\n",
     "\n",
@@ -172,16 +178,24 @@
     "    list_file['price'] = list_file.price.replace('[\\$,]', '', regex=True).astype(float)\n",
     "\n",
     "     # Reduce the size of variables in the listings dataframe.\n",
-    "    list_file_small = list_file[['id', 'price', 'host_listings_count','bedrooms', 'bathrooms', 'neighbourhood', 'zipcode', 'room_type', \n",
-    "                                 'instant_bookable', 'update_numeric', 'DSR', 'cal_trust', 'availability_365']]\n",
+    "    list_file_small = list_file[['id', 'price', 'host_listings_count','bedrooms', 'bathrooms', \n",
+    "                                 'neighbourhood', 'zipcode', 'room_type', 'instant_bookable', \n",
+    "                                 'update_numeric', 'DSR', 'cal_trust', 'availability_365']]\n",
+    "    \n",
     "    list_file_small.columns = ['id', 'headline_price', 'host_lists', 'bedrooms', \n",
     "                               'bathrooms', 'neigh', 'zip', 'type', 'instant', \n",
     "                               'DSupdate', 'DSReview', 'Active_flag', 'avail365']\n",
     "    # Managing calendar dataframe\n",
     "    cal_file = pd.read_csv(\"united-states_portland_\" + date + \"_calendar.csv.gz\", compression = 'gzip')\n",
-    "    cal_file = cal_file[['listing_id', 'date','available', 'price']] # This is needed because newer calendar files add cols\n",
-    "    cal_file = cal_file[(cal_file['date'] >= cal_start)& (cal_file['date'] <= cal_end)] # Deal with different scrape times\n",
-    "    cal_file['price'] = cal_file.price.replace('[\\$,]', '', regex=True).astype(float)   # Prices converted to floats\n",
+    "\n",
+    "    # This is needed because newer calendar files add cols\n",
+    "    cal_file = cal_file[['listing_id', 'date','available', 'price']] \n",
+    "\n",
+    "    # Deal with different scrape times\n",
+    "    cal_file = cal_file[(cal_file['date'] >= cal_start)& (cal_file['date'] <= cal_end)] \n",
+    "    \n",
+    "    # Prices converted to floats\n",
+    "    cal_file['price'] = cal_file.price.replace('[\\$,]', '', regex=True).astype(float)   \n",
     "    \n",
     "    print(\"----Cleaning calendar and listings data for \" + date + \"----\")\n",
     "    print(\"Listing-dates removed: \" + str(float(len(cal_file) - len(cal_file[cal_file['listing_id'].isin(trusted_ids)]))))\n",
@@ -193,13 +207,6 @@
     "    cal_file.columns = ['id', 'date', 'avail', 'night_price']\n",
     "    \n",
     "    return cal_file, list_file_small"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Initial data cleaning and merge"
    ]
   },
   {
@@ -413,8 +420,8 @@
     "\n",
     "dates_in_datetime = init_dates.astype('datetime64[D]')\n",
     "\n",
-    "my_cals =[]\n",
-    "my_lists=[]\n",
+    "my_cals = []\n",
+    "my_lists = []\n",
     "for i in range (0, len(dates_in_datetime)-1):\n",
     "    if (adjustment_layer[i]!=0):\n",
     "        cal, listing = complex_extract_cal_list(str(dates_in_datetime[i]), \n",
@@ -431,10 +438,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Utilization of a more Pythonic method"
+    "# 2. Select listings ids and dates of interest\n",
+    "\n",
+    "Appropriate listings and dates will depend on a researcher’s specific focus, here ids are chosen based on listings are selected based on criteria set-up in a previous notebook and dates are set to avoid 2020."
    ]
   },
   {
@@ -443,7 +453,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "listings_df = listings_df[(listings_df['scrape_batch'] >= str(dates_in_datetime[0])) & (listings_df['scrape_batch'] <= str(dates_in_datetime[-1]))]"
+    "listings_df = listings_df[(listings_df['scrape_batch'] >= str(dates_in_datetime[0])) \n",
+    "                          & (listings_df['scrape_batch'] <= str(dates_in_datetime[-1]))]"
    ]
   },
   {
@@ -487,10 +498,40 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Primary chunked processing and CSV creation"
+    "# 3. Function to identify bookings and their associated prices\n",
+    "\n",
+    "Function is created to identify bookings and prices for all listings in the selected sample. This function leverages numpy arrays to improve efficiency. The larger these numpy arrays become, the greater the strain on a computer’s memory. It will usually be necessary to process data in separate chunks.\n",
+    "\n",
+    "There are two ways in which a property is considered booked:\n",
+    "\n",
+    "* **Available to unavailable:** \n",
+    "     Firstly a property is booked if the sum of the avail_change column for a \n",
+    "     given property across various scrapes is equal to -1. This represents the \n",
+    "     fact that a property was seen as available and then it became unavailable. Going from avail = 1 to avail = 0 \n",
+    "     means that we subract 1 for this variable.\n",
+    " \n",
+    "* **Allowing for unavailable to available to unavailable:** \n",
+    "    I want to allow for a property to be \n",
+    "    unavailable, become available and then switch \n",
+    "    back to being unavailable. To achieve this, I \n",
+    "    set three conditions:\n",
+    "\n",
+    "    * **Cond 2.1:** Sum of the avail_change row is 0, \n",
+    "    this allows for a property to go \n",
+    "    from unavailable to available (1) \n",
+    "    and then go from available to \n",
+    "    unavailable (-1)\n",
+    "\n",
+    "    * **Cond 2.2:** Second, the last availability seen \n",
+    "    must be equal to zero\n",
+    "\n",
+    "    * **Cond 2.3:** Thirdly, the property must have been \n",
+    "    seen as available at some point so we\n",
+    "    must have a 1 in the avail_matrix"
    ]
   },
   {
@@ -502,7 +543,8 @@
     "def cal_file(df, unq_dates, unq_ids):\n",
     "\n",
     "    \"\"\"\n",
-    "    [ADD DOCUMENTATION!]\n",
+    "    Function ensures that the calendar file \n",
+    "    only contains ids and dates chosen by the researcher.\n",
     "    \"\"\"\n",
     "    \n",
     "    return df[(df['date'].isin(unq_dates)) & \n",
@@ -511,7 +553,8 @@
     "def highest_index(a):\n",
     "    \n",
     "    \"\"\"\n",
-    "    [ADD DOCUMENTATION!]\n",
+    "    Function finds the highest index for an array that is not null.\n",
+    "    If all values are null then return 99999.\n",
     "    \"\"\"\n",
     "    \n",
     "    try:\n",
@@ -521,7 +564,7 @@
     "    \n",
     "def last_nonzero(arr, axis, invalid_val=-1):\n",
     "    \"\"\"\n",
-    "    This function finds the last non-zero value of an array.\n",
+    "    Function finds the last non-zero value of an array.\n",
     "    \"\"\"\n",
     "\n",
     "    mask = arr!= \"nan\"\n",
@@ -561,11 +604,6 @@
     "\n",
     "# =========================================================\n",
     "\n",
-    "#     def cal_file(df, unq_dates, unq_ids):\n",
-    "#         return df[(df['date'].isin(unq_dates)) & (df['id'].isin(unq_ids))].sort_values(by=['id','date']).reset_index(drop = True)\n",
-    "\n",
-    "# =========================================================\n",
-    "\n",
     "    calendar_scrapes = []\n",
     "\n",
     "    for my_cal in my_cals:\n",
@@ -574,7 +612,7 @@
     "    N_CALS = len(calendar_scrapes)\n",
     "    i = 1\n",
     "    \n",
-    "    for cal_files in calendar_scrapes: # NAMING CONVENTIONS ARE DANGEROUSLY SIMILAR....\n",
+    "    for cal_files in calendar_scrapes:\n",
     "        \n",
     "        cal_files.loc[:, 'key'] = cal_files['id'].astype(str).str.strip() + \":\" + cal_files['date'].str.strip()\n",
     "        cal_files.columns = ['id' + str(i), 'date' + str(i), 'avail' + str(i), 'night_price' + str(i),\n",
@@ -584,8 +622,8 @@
     "# =========================================================\n",
     "\n",
     "# Create a dataframe for all availabilities and prices for every listing-night\n",
-    "# across scrape files.\n",
-    "#     * This dataframe is broken up into separate availability and price matrices\n",
+    "# across scrape files. \n",
+    "#    * Note: This dataframe is broken up into separate availability and price matrices\n",
     "        \n",
     "    cal_dfs = [key_df]\n",
     "\n",
@@ -621,45 +659,8 @@
     "    avail_change = np.diff(avail_matrix, axis=2)\n",
     "    \n",
     "# =========================================================\n",
-    "\n",
-    "#   There are two ways in which a property is considered booked:\n",
-    "\n",
-    "# * **Available to unavailable:** \n",
-    "#             Firstly a property is booked if the sum of the avail_change column for a \n",
-    "#             given property across various scrapes is equal to -1. This represents the \n",
-    "#             fact that a property was seen as available and then it became unavailable. \n",
-    "# \n",
-    "# * **Allowing for unavailable to available to unavailable:** \n",
-    "#             I want to allow for a property to be \n",
-    "#             unavailable, become available and then switch \n",
-    "#             back to being unavailable. To achieve this, I \n",
-    "#             set three conditions:\n",
-    "\n",
-    "#                **Cond 2.1:** Sum of the avail_change row is 0, \n",
-    "#                this allows for a property to go \n",
-    "#                from unavailable to available (1) \n",
-    "#                and then go from available to \n",
-    "#                unavailable (-1)\n",
-    "\n",
-    "#                **Cond 2.2:** Second, the last availability seen \n",
-    "#                must be equal to zero\n",
-    "\n",
-    "#                **Cond 2.3:** Thirdly, the property must have been \n",
-    "#                seen as available at some point so we\n",
-    "#                must have a 1 in the avail_matrix\n",
     "    \n",
     "    case_1 = (np.nansum(avail_change, axis=2) == -1)*1 \n",
-    "# =========================================================    \n",
-    "#     def last_nonzero(arr, axis, invalid_val=-1):\n",
-    "#         \"\"\"\n",
-    "#         This function finds the last non-zero value of an array.\n",
-    "#         \"\"\"\n",
-    "        \n",
-    "#         mask = arr!= \"nan\"\n",
-    "#         val = arr.shape[axis] - np.flip(mask,axis=axis).argmax(axis=axis) - 1\n",
-    "        \n",
-    "#         return np.where(mask.any(axis=axis), val, invalid_val)\n",
-    "\n",
     "# =========================================================    \n",
     "\n",
     "    str_avail = avail_matrix.astype(str)\n",
@@ -697,7 +698,7 @@
     "    case_2 = cond_21*cond_22*cond_23\n",
     "    \n",
     "# =========================================================\n",
-    "    # Create A MATRIX FOR BOOKINGS\n",
+    "    # CREATE A MATRIX FOR BOOKINGS\n",
     "    \n",
     "    booked_mat = np.maximum(case_1, case_2)\n",
     "    booked_mat = np.reshape(booked_mat, (N_DATES*N_IDS,1), order='F')\n",
@@ -737,12 +738,6 @@
     "    booked_df.loc[mask, column_name] = np.nan\n",
     "    \n",
     "# =========================================================\n",
-    "#     def highest_index(a):\n",
-    "#         try:\n",
-    "#             return a[~np.isnan(a)][-1]\n",
-    "#         except: \n",
-    "#             return 99999\n",
-    "# =========================================================\n",
     "    \n",
     "    # Add prices for places that are available but not booked\n",
     "    price_matrix_np = np.float64(price_matrix)\n",
@@ -772,7 +767,7 @@
     "# =========================================================\n",
     "    # APPEND TO LIST\n",
     "    \n",
-    "    os.chdir(data_path)\n",
+    "    os.chdir(data_path) #MOVE THIS !\n",
     "    df_list.append(booked_df_save)\n",
     "    \n",
     "#     print('chunk '+ str(j) + \" completed\") # Creates many prints, helpful for error checking"
