Updates to visualization files
Relatively small changes

--- a/2. Clean data/Calendar_integration_partA.ipynb
+++ b/2. Clean data/Calendar_integration_partA.ipynb
@@ -812,7 +812,7 @@
     "    j+=1\n",
     "    \n",
     "booked_df_final = pd.concat(df_list)\n",
-    "booked_df_final.to_csv('rejoined_booked_df.csv.gz', \n",
+    "booked_df_final.to_csv(city_abbrev + '_rejoined_booked_df.csv.gz', \n",
     "                       index=False, compression='gzip')\n",
     "\n",
     "print(\"Process complete!\")"
