--- a/2. Clean data/1st_stage_panel_data_cleaning.ipynb
+++ b/2. Clean data/1st_stage_panel_data_cleaning.ipynb
@@ -9,7 +9,7 @@
     "This notebook performs the first round of data cleaning tasks on the final long form data produced from the Aggregate Listings Data notebook. These tasks include:\n",
     "\n",
     "* 1. **Preliminary cleaning:** Includes de-stringing prices, formatting dates and computing variable lags and leads\n",
-    "* 2. **Exploring missing values:** Create functions for understanding NaN values and fills in time-invariant characteristics of a listing\n",
+    "* 2. **Exploring missing values:** Creates functions for understanding NaN values and fills in time-invariant characteristics of a listing\n",
     "* 3. **Neighborhood categorization:** Assign neighborhoods to listings based on their GPS coordinates \n",
     "* 4. **'Calendar Update' formatting:** Creating numerical measure for how often an Airbnb listing is updated by the property host\n",
     "* 5. **Additional variable creation:** Additional variables are created for further anaylsis\n",
@@ -282,7 +282,7 @@
     "\n",
     "* When describing the 'NOR_diff' variable, we can observe the maximum number of reviews in a given month is 149! Which is not a reasonable number of reviews for a property to recieve in in 30/31 days. \n",
     "\n",
-    "* It may be desirable to make an assumption that reviews are recieved evenly across the months in which the property fails to appear in the scrape."
+    "* It may be desirable to make an assumption that reviews are evenly across the months in which the property fails to appear in the scrape."
    ]
   },
   {
@@ -375,7 +375,7 @@
     "    \n",
     "    \"\"\"\n",
     "    This function checks what the difference between the number of unique ids and the \n",
-    "    number of ids paired with some property characteristic. \n",
+    "    number of ids is paired with some property characteristic. \n",
     "    The key use case is to see whether or not a listing trait changes.\n",
     "    \"\"\"\n",
     "    \n",
@@ -454,7 +454,7 @@
    "metadata": {},
    "source": [
     "## Filling in N/A's\n",
-    "This section of the code fills missing data in forwards and backwards for values that would be expected to be invariant over time, such as fixed property features, and host characteristics, such as when the host first started using Airbnb."
+    "This section of the code fills missing data in forwards and backwards for values that would be expected to be invariant over time, such as fixed property features and host characteristics, during times for example when the host first started using Airbnb."
    ]
   },
   {
@@ -472,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assumption: Properties do not change features when they are no observed\n",
+    "### Assumption: Properties do not change features when they are not observed\n",
     "Forward fill, then back fill. This means older features have priority."
    ]
   },
@@ -935,7 +935,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flag month where an listing is first hosted"
+    "## Flag month where a listing is first hosted"
    ]
   },
   {
@@ -952,7 +952,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flag month where an listing is last hosted"
+    "## Flag month where a listing is last hosted"
    ]
   },
   {
@@ -1398,7 +1398,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1412,7 +1412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
